--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">ParkingBikers</string>
-    <string name="google_map_api_key">AIzaSyA8nXUBepJBT-MNPdKnVi4ZvSkY2TpORt8</string>
+    <string name="google_map_api_key"></string>
 </resources>
